--- a/signin.html
+++ b/signin.html
@@ -62,119 +62,131 @@
     </nav>
 
     <!-- SIGN IN SECTION -->
-    <section id="signInSection">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 mx-auto py-3">
+    <div class="container" id="signInSection">
+        <div class="row">
+            <div class="col-md-8 col-lg-6 mx-auto py-3">
+                <div class="card pb-3 px-3">
                     <ul class="nav nav-tabs text-center">
-                        <li class="nav-item text-uppercase col-md-6"><a class="nav-link active" href="#signIn" role="tab" data-toggle="tab">Sign In</a></li>
-                        <li class="nav-item text-uppercase col-md-6"><a class="nav-link" href="#signUp" role="tab" data-toggle="tab">Sign Up</a>
+                        <li class="nav-item text-uppercase col-md-6"><a class="nav-link active" href="#signIn"
+                                role="tab" data-toggle="tab">Sign In</a></li>
+                        <li class="nav-item text-uppercase col-md-6"><a class="nav-link" href="#signUp" role="tab"
+                                data-toggle="tab">Sign Up</a>
                         </li>
                     </ul>
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="tab-content">
-                                <!-- SIGN IN PANEL-->
-                                <div role="tabpanel" class="tab-pane fade show active" id="signIn">
-                                    <div class="text-center">
-                                        <h2 class="mt-3">Sign in to your account</h2>
+                    <div class="tab-content">
+                        <!-- SIGN IN PANEL-->
+                        <div role="tabpanel" class="tab-pane fade show active" id="signIn">
+                            <div class="text-center">
+                                <h2 class="mt-3">Sign in to your account</h2>
+                            </div>
+                            <p class="form-text text-muted sizing">No more pain to find the house of your choice.
+                                <br>No more pain to sell your house and terrain.
+                            </p>
+                            <div class="col">
+                                <form action="" class="formGroup" id="formGroup">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control btn-lg placeHolder" name="emailAddress"
+                                            id="emailAddress" placeholder="Email Address">
                                     </div>
-                                    <p class="form-text text-center text-muted">No more pain to find the house of your choice. <br>No more pain to sell your house and terrain.
-                                    </p>
-                                    <div class="col">
-                                        <form action="" class="form-group" id="form-group">
-                                            <div class="form-group">
-                                                <input type="email" class="form-control" name="emailAddress" id="emailAddress" placeholder="Email Address">
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
-                                            </div>
-                                            <p class="form-text">By clicking Sign In, you agree to our Terms of Use and our Privacy Policy.</p>
-                                            <a href="#" class="btn btn-info form-control d-none d-block my-4 rounded text-uppercase shadow">Sign
-                                                In</a>
-                                            <a href="#" class="form-text text-center text-primary font-weight-bold">Forgot your password?</a>
-                                            <div class="separator text-muted my-4">you can also use</div>
-                                            <div class="form-group row">
-                                                <div class="col-6">
-                                                    <a href="#" class="btn btn-social btn-md btn-google form-control">
-                                                        <i class="fab fa-google"></i>Sign in with Google
-                                                    </a>
-                                                </div>
-                                                <div class="col-6">
-                                                    <a href="#" class="btn btn-social btn-md btn-facebook form-control">
-                                                        <i class="fab fa-facebook"></i>Sign in with Facebook
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </form>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control btn-lg placeHolder" name="password"
+                                            id="password" placeholder="Password">
                                     </div>
-                                </div>
-                                <!-- SIGN UP PANEL -->
-                                <div role="tabpanel" class="tab-pane fade show" id="signUp">
-                                    <div class="text-center">
-                                        <h2 class="mt-3">Create an account</h2>
+                                    <p class="form-text sizing">By clicking Sign In, you agree to our
+                                        <a href="#" class="text-primary font-weight-bold">Terms of
+                                            Use</a> and our <a href="#" class="text-primary font-weight-bold">Privacy
+                                            Policy.</a></p>
+                                    <a href="#"
+                                        class="btn btn-info form-control d-none d-block my-4 rounded text-uppercase shadow">Sign
+                                        In</a>
+                                    <a href="reset-password-account.html"
+                                        class="form-text text-center text-primary font-weight-bold">Forgot your
+                                        password?</a>
+                                    <div class="separator text-muted my-4">you can also</div>
+                                    <div class="form-group row">
+                                        <div class="col-6">
+                                            <a href="#" class="btn btn-social btn-md btn-google form-control">
+                                                <i class="fab fa-google"></i>Sign in with Google
+                                            </a>
+                                        </div>
+                                        <div class="col-6">
+                                            <a href="#" class="btn btn-social btn-md btn-facebook form-control">
+                                                <i class="fab fa-facebook"></i>Sign in with Facebook
+                                            </a>
+                                        </div>
                                     </div>
-                                    <p class="form-text text-center text-muted">No more pain to find the house of your
-                                        choice. <br>No more pain to sell your house and terrain.
-                                    </p>
-                                    <div class="col">
-                                        <form action="" class="form-group" id="form-group">
-                                            <div class="form-group row">
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" name="firstName" id="firstName"
-                                                        placeholder="First Name">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="email" class="form-control" name="emailAddress" id="emailAddress"
-                                                    placeholder="Email Address">
-                                                <small id="emailHelp" class="form-text text-muted">We'll never share
-                                                    your email with anyone else.</small>
-                                            </div>
-                                            <div class="form-group row">
-                                                <div class="col-md-6">
-                                                    <input type="password" class="form-control" name="password" id="password"
-                                                        placeholder="Password">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="password" class="form-control" name="passwordConfirm" id="passwordConfirm"
-                                                        placeholder="Confirm Password">
-                                                </div>
-                                            </div>
-                                            <p class="form-text">By clicking Sign In, you agree to our Terms of Use and
-                                                our Privacy Policy.</p>
-                                            <a href="#" class="btn btn-info form-control d-none d-block my-4 rounded text-uppercase shadow">Sign
-                                                Up</a>
-                                            <a href="#" class="form-text text-center text-primary font-weight-bold">Forgot
-                                                your
-                                                password?</a>
-                                            <div class="separator text-muted my-4">you can also use</div>
-                                            <div class="form-group row">
-                                                <div class="col-6">
-                                                    <a href="#" class="btn btn-social btn-md btn-google form-control">
-                                                        <i class="fab fa-google"></i>Sign in with Google
-                                                    </a>
-                                                </div>
-                                                <div class="col-6">
-                                                    <a href="#" class="btn btn-social btn-md btn-facebook form-control">
-                                                        <i class="fab fa-facebook"></i>Sign in with Facebook
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
+                                </form>
                             </div>
                         </div>
-                        
-                    
+                        <!-- SIGN UP PANEL -->
+                        <div role="tabpanel" class="tab-pane fade show" id="signUp">
+                            <div class="text-center">
+                                <h2 class="mt-3">Create an account</h2>
+                            </div>
+                            <p class="form-text text-muted sizing">No more pain to find the house of your
+                                choice.
+                                <br>No more pain to sell your house and terrain.
+                            </p>
+                            <div class="col">
+                                <form action="" class="form-group" id="form-group">
+                                    <div class="form-group row">
+                                        <div class="col-md-6">
+                                            <input type="text" class="form-control btn-lg placeHolder" name="firstName"
+                                                id="firstName" placeholder="First Name">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input type="text" class="form-control btn-lg placeHolder" name="lastName"
+                                                id="lastName" placeholder="Last Name">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control btn-lg placeHolder" name="emailAddress"
+                                            id="emailAddress" placeholder="Email Address">
+                                        <small id="emailHelp" class="form-text text-muted">We'll never share
+                                            your
+                                            email with anyone else.</small>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-md-6">
+                                            <input type="password" class="form-control btn-lg placeHolder"
+                                                name="password" id="password" placeholder="Password">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input type="password" class="form-control btn-lg placeHolder"
+                                                name="passwordConfirm" id="passwordConfirm"
+                                                placeholder="Confirm Password">
+                                        </div>
+                                    </div>
+                                    <p class="form-text text-center sizing">By clicking Sign In, you agree to
+                                        our
+                                        <a href="#" class="text-primary font-weight-bold">Terms of Use</a> and
+                                        our
+                                        <a href="#" class="text-primary font-weight-bold">Privacy Policy.</a>
+                                    </p>
+                                    <a href="#"
+                                        class="btn btn-info form-control d-none d-block my-4 rounded text-uppercase shadow">Sign
+                                        Up</a>
+                                    <div class="separator text-muted my-4">you can also</div>
+                                    <div class="form-group row">
+                                        <div class="col-6">
+                                            <a href="#" class="btn btn-social btn-md btn-google form-control">
+                                                <i class="fab fa-google"></i>Sign in with Google
+                                            </a>
+                                        </div>
+                                        <div class="col-6">
+                                            <a href="#" class="btn btn-social btn-md btn-facebook form-control">
+                                                <i class="fab fa-facebook"></i>Sign in with Facebook
+                                            </a>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- FOOTER SECTION -->
     <footer class="page-footer font-small bg-dark text-white pt-4">
